# cpp-smart-library-manager

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build_windows.bat
.github/workflows/: ci.yml
data/: books.csv
docs/: DESIGN.md
src/: library.cpp  main.cpp  windows_gui.cpp
tests/: library_tests.cpp
