cmake_minimum_required(VERSION 3.16)
project(SmartLibraryManager VERSION 1.0.0 LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

add_library(library_core src/library.cpp)
target_include_directories(library_core PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include)

if(MSVC)
    target_compile_options(library_core PRIVATE /W4 /permissive-)
else()
    target_compile_options(library_core PRIVATE -Wall -Wextra -Wpedantic)
endif()

if(WIN32)
    add_executable(library_manager WIN32 src/windows_gui.cpp)
    target_link_libraries(library_manager PRIVATE library_core comctl32)
    if(MINGW)
        target_link_options(library_manager PRIVATE -static -static-libgcc -static-libstdc++)
    endif()
else()
    add_executable(library_cli src/main.cpp)
    target_link_libraries(library_cli PRIVATE library_core)
endif()

option(BUILD_TESTING "Build automated tests" OFF)
if(BUILD_TESTING)
    enable_testing()
    add_executable(library_tests tests/library_tests.cpp)
    target_link_libraries(library_tests PRIVATE library_core)
    if(MINGW)
        target_link_options(library_tests PRIVATE -static -static-libgcc -static-libstdc++)
    endif()
    add_test(NAME library_tests COMMAND library_tests)
endif()
